--- a/RoboConferenciaSat/RoboConferenciaSat.csproj
+++ b/RoboConferenciaSat/RoboConferenciaSat.csproj
@@ -10,7 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Easy.Automation" Version="1.0.0.12" />
+    <PackageReference Include="Selenium.Support" Version="4.29.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.29.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="134.0.6998.3500" />
+    <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
